# tshark2pandas

./: .gitignore  Makefile  README.md  demo.py  setup.cfg  setup.py  test.cap  test_tshark2pandas.py  tshark2pandas.py  tshark2pandas_jsonfilter.cpp
.github/workflows/: test.yml
tshark2pandas/: #tshark2pandas_jsonfilter#  Makefile  test_tshark2pandas.py  tshark2pandas_jsonfilter.cpp
