[metadata]
name = tshark2pandas 
license = Apache-2
author-email = josh@vandervecken.com
home-page = https://github.com/anarkiwi/tshark2pandas
platform = any
classifier =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
